[package]
# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["Cristian Eigel <cristian.eigel@esrlabs.com>"]
name = "dcf77"
edition = "2018"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.1"
cortex-m-rtic = "0.5.8"
feather-f405 = "0.2.0"
heapless = "0.7.5"
panic-rtt-target = {version="0.1.2", features = ["cortex-m"] }
rtt-target = {version= "0.3.1",  features = ["cortex-m"] }
ht16k33 = { version = "0.4.0", default-features = false }
adafruit-7segment = { version = "0.1.0", default-features = false  }

[dev-dependencies]
usb-device = "0.2"
usbd-serial = "0.1"
rtt-target = { version = "0.3", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
usbd_scsi = "0.1"
usbd_mass_storage = "0.1"
